# solar_system

./: .gitignore  CMakeLists.txt  README.md  bodies.json
include/: CelestialBody.h  TextureLoader.h  Vector.h  physics.h
include/glad/: glad.h
include/linalg-lib/: matrix.hpp  vector.hpp
src/: CelestialBody.cpp  Vector.cpp  glad.c  main.cpp  physics.cpp  stb_image.cpp
tests/: vector_tests.cpp
